Always set the file.encoding system property when running Java