@@ -9,7 +9,7 @@ server with the following commands:
 
      build/run dist
 
-     java -jar archivesspace.jar
+     java -XX:MaxPermSize=128m -Dfile.encoding=UTF-8 -jar archivesspace.jar
 
 This will start the ArchivesSpace application running on:
 
@@ -21,7 +21,7 @@ and the backend web service running on:
 
 If you'd like to use different ports, you can run:
 
-    java -jar archivesspace.jar [frontend port] [backend port]
+    java -XX:MaxPermSize=128m -Dfile.encoding=UTF-8 -jar archivesspace.jar [frontend port] [backend port]
 
 To set up the application log in to the frontend application using the
 adminstrator account: 
